<resources>
    <string name="app_name">GMS</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main">Trainer</string>
    <string name="name">Exercise Name</string>
    <string name="date">Excercise Date</string>
    <string name="score">Exercise Volume</string>
    <string name="send">Add Workout Schedule</string>
    <string name="load">Load Workout Schedule</string>
    <string name="manageTrainee">Add Trainee Schedule </string>
    <string name="checkTrainee">Check Trainee Schedule</string>
</resources>
